# serde_cast

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
