[package]
name = "serde_cast"
description = "Simple A to B cast"
authors = ["buj"]
license-file = "LICENSE"
license = "MIT"
repository = "https://github.com/5GameMaker/serde_cast"
homepage = "https://github.com/5GameMaker/serde_cast"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.1"
serde = "1.0.*"

[dev-dependencies]
serde = { version = "1.0.*", features = ["derive"] }
