[package]
name = "serde_cast"
description = "Simple A to B cast"
authors = ["buj"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/5GameMaker/serde_cast"
homepage = "https://github.com/5GameMaker/serde_cast"
documentation = "https://docs.rs/bencher/"
keywords = ["fun"]
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.1"
serde = "1.0.*"

[dev-dependencies]
serde = { version = "1.0.*", features = ["derive"] }
